k8s/prod/11-redis.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: cv-prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
        - name: redis
          image: redis:7-alpine
          args: ["redis-server", "--appendonly", "no"]
          ports:
            - containerPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: cv-prod
spec:
  selector:
    app: redis
  ports:
    - port: 6379
      targetPort: 6379
