k8s/prod/20-php.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: php
  namespace: cv-prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: php
  template:
    metadata:
      labels:
        app: php
    spec:
      containers:
        - name: php
          image: ghcr.io/norrim/my-cv-php:prod
          imagePullPolicy: Always
          ports:
            - containerPort: 9000
          readinessProbe:
            tcpSocket:
              port: 9000
            initialDelaySeconds: 5
            periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: php
  namespace: cv-prod
spec:
  selector:
    app: php
  ports:
    - port: 9000
      targetPort: 9000
