k8s/prod/21-nginx.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  namespace: cv-prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      securityContext:
        fsGroup: 82
      containers:
        - name: nginx
          image: ghcr.io/norrim/my-cv-nginx:prod
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          volumeMounts:
            - name: uploads
              mountPath: /var/www/html/public/uploads
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 5
      volumes:
        - name: uploads
          persistentVolumeClaim:
            claimName: uploads
---
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: cv-prod
spec:
  selector:
    app: nginx
  ports:
    - port: 80
      targetPort: 80
